<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">Sunshine</string>
    <string name="detail_activity">Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Open Map</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="share" translatable="false">Share</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_temp_title">Temperature Units</string>
    <string name="pref_units">units</string>
    <string name="pref_imperial">farenheit</string>
    <string name="pref_metric">metrics</string>
    <string name="metric_speed">km/h</string>
    <string name="imperial_speed">m/h</string>
    <string name="pref_units_key">units_key</string>
    <string name="pref_units_metric">c</string>
    <string name="pref_units_imperial">f</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_speed_metric"><xliff:g id="unit">%1$s</xliff:g>km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_speed_imperial"><xliff:g id="unit">%1$s</xliff:g>m/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="pressure_label">Pressure</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>
    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.fabiohh.sunshine.app</string>
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <string name="pref_last_notification">last_notification</string>
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_location_result">Location_result</string>
    <string name="pref_lat_location">Latitude</string>
    <string name="pref_lon_location">Longitude</string>
    <string name="location_label" translatable="true">Location</string>
    <string name="empty_forecast_list" translatable="true">No weather information available.</string>
    <string name="empty_forecast_list_no_network" translatable="true">No weather information available. Check your network settings and try again.</string>
    <string name="empty_forecast_list_server_down" translatable="true">No weather information available. Server is down.</string>
    <string name="empty_forecast_list_server_error" translatable="true">No weather information available. Server error.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <!-- Label for the art pack preference [CHAR LIMIT=30] -->
    <string name="pref_art_pack_label">Icon Pack</string>

    <!-- Label for Sunshine option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_sunshine">Sunshine</string>

    <!-- Label for cute dogs option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_cute_dogs">Cute dogs</string>

    <!-- Key name for art pack unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_key" translatable="false">art_pack</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>

    <string name="pref_current_location_desc" translatable="false">Current location</string>
    <string name="widget_title_today" translatable="true">Sunshine</string>
    <string name="widget_empty_list" translatable="true">Weather Unavailable</string>
    <string name="muzei_description" translatable="true">Muzei</string>
</resources>
