<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.fabiohh.sunshine.app"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.example.fabiohh.sunshine.app.LocationEditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:inputType="text"
        android:defaultValue="@string/pref_location_default"
        android:singleLine="true"
        custom:minLength="3"/>

    <ListPreference
        android:key="@string/pref_units"
        android:title="@string/pref_temp_title"
        android:summary="@string/pref_metric"
        android:entries="@array/unit_preferences"
        android:entryValues="@array/unit_values"
        android:defaultValue="string/pref_metric"
        />
    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default"
        />

</PreferenceScreen>